<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cabinet</string>

    <string name="no_files">No files</string>
    <string name="open_with">Open with…</string>
    <string name="send_using">Send using…</string>
    <string name="directory">Folder</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="manual_mime">{extension} file</string>

    <string name="folder_not_found">Folder not found</string>

    <string name="one_file_selected">1 File Selected</string>
    <string name="x_files_selected">{X} Files Selected</string>
    <string name="no_shortcuts">No shortcuts</string>

    <string name="add_shortcut">Add Shortcut</string>
    <string name="mount">Mount</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="sort">Sort</string>
    <string name="paste">Paste</string>
    <string name="move">Move</string>
    <string name="share">Share</string>
    <string name="select_all">Select All</string>
    <string name="rename">Rename</string>
    <string name="zip">Zip</string>
    <string name="unzip">Unzip</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="new_folder">New Folder</string>
    <string name="ok">OK</string>
    <string name="untitled">Untitled</string>

    <string name="sort_name_folderstop">By name, folders first</string>
    <string name="sort_name">By name</string>
    <string name="sort_extension">By extension</string>
    <string name="sort_size_lowhigh">By size, low to high</string>
    <string name="sort_size_highlow">By size, high to low</string>

    <string name="sdcard">SD Card</string>
    <string name="root">Root</string>

    <string name="please_wait">Please wait…</string>

    <string name="confirm_copy_paste"><![CDATA[
        Copy these files:<br/><br/>{paths}<br/>to <b>{dest}</b>
    ]]></string>
    <string name="confirm_cut_paste"><![CDATA[
        Move these files:<br/><br/>{paths}<br/>to <b>{dest}</b>
    ]]></string>

    <string name="shortcut_not_removeable">This shortcut cannot be removed</string>
    <string name="remove_shortcut">Remove Shortcut</string>
    <string name="confirm_remove_shortcut">Are you sure you want to remove this shortcut to {path}?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete"><![CDATA[
        Are you sure you want to delete these files/folders?<br/><br/>{paths}<br/>from <b>{dest}</b>
    ]]></string>

    <string name="enable_root_prompt">Do you want to enable root access? You can only do so if your device is rooted.
        This can be disabled later from the app\'s settings.
    </string>

    <string name="root_denied">Root access was denied</string>
    <string name="root_disabled">Root is disabled, it can enabled again in the app\'s settings.</string>
    <string name="zip_hint">Untitled.zip</string>
    <string name="new_names">New name(s)</string>

    <string name="mounted_as_x">Mounted as {X}</string>
    <string name="error">Error</string>

    <string name="open_as">Open as…</string>
    <string name="add_remote">Add SFTP Server</string>
    <string name="host">Host</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="downloading">Downloading…</string>
    <string name="howto_shortcut_hint">Add shortcuts to local directories using the pin button.</string>
    <string-array name="open_as_options">
        <item>Text</item>
        <item>Audio</item>
        <item>Image</item>
        <item>Video</item>
        <item>Other</item>
    </string-array>

</resources>
