<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/add_shortcut" android:title="@string/add_shortcut"
          android:icon="@drawable/ic_pin" android:showAsAction="ifRoom"/>
    <item android:id="@+id/copy" android:title="@string/copy"
          android:icon="@drawable/ic_copy" android:showAsAction="ifRoom"/>
    <item android:id="@+id/cut" android:title="@string/cut"
          android:icon="@drawable/ic_cut" android:showAsAction="ifRoom"/>
    <item android:id="@+id/paste" android:title="@string/paste"
          android:icon="@drawable/ic_paste" android:showAsAction="ifRoom"/>
    <item android:id="@+id/share" android:title="@string/share"
          android:icon="@drawable/ic_share" android:showAsAction="ifRoom"/>
    <item android:id="@+id/delete" android:title="@string/delete"
          android:icon="@drawable/ic_delete" android:showAsAction="ifRoom"/>

</menu>